{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 194,
  "lineage": "b752c9f1-8e3a-e231-01e3-6f5b1b09c694",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:480348506690:instance/i-0e6e2bc036295c5dd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e6e2bc036295c5dd",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef88b8ee8514a56f",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-3-84-242-244.compute-1.amazonaws.com",
            "public_ip": "3.84.242.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06852d68fa12c3a87",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0179f6b6e1be23d7e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-091798d9e3f6cb356"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws-key-pair",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0885b1f6bd170450c",
            "arn": "arn:aws:ec2:us-east-1:480348506690:instance/i-0e37526ec1ff9ebb7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e37526ec1ff9ebb7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-034b6fe972b37b6a3",
            "private_dns": "ip-10-0-1-140.ec2.internal",
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-18-212-226-196.compute-1.amazonaws.com",
            "public_ip": "18.212.226.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057831c611751b631",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0179f6b6e1be23d7e",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-091798d9e3f6cb356"
            ]
          },
          "dependencies": [
            "aws_key_pair.aws-key-pair",
            "aws_security_group.ssh-allowed",
            "aws_subnet.prod-subnet-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480348506690:internet-gateway/igw-045f1716d1c64aeab",
            "id": "igw-045f1716d1c64aeab",
            "owner_id": "480348506690",
            "tags": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0eb8c24d66e9f56d5"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-public-crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01c95e2a6d3cb6a93",
            "owner_id": "480348506690",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045f1716d1c64aeab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-public-crt"
            },
            "vpc_id": "vpc-0eb8c24d66e9f56d5"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod-crta-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d6c595ee3e44bc37",
            "route_table_id": "rtb-01c95e2a6d3cb6a93",
            "subnet_id": "subnet-0179f6b6e1be23d7e"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.prod-public-crt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480348506690:security-group/sg-091798d9e3f6cb356",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091798d9e3f6cb356",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210108192734491800000001",
            "name_prefix": "",
            "owner_id": "480348506690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb8c24d66e9f56d5"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480348506690:subnet/subnet-0179f6b6e1be23d7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0179f6b6e1be23d7e",
            "map_public_ip_on_launch": true,
            "owner_id": "480348506690",
            "tags": {
              "Name": "prod-subnet-public-1"
            },
            "vpc_id": "vpc-0eb8c24d66e9f56d5"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:480348506690:vpc/vpc-0eb8c24d66e9f56d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d9e10a223b8b0541",
            "default_route_table_id": "rtb-07fbb56cd7a10bd86",
            "default_security_group_id": "sg-00b5e9c4578179403",
            "dhcp_options_id": "dopt-c9dca6b3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0eb8c24d66e9f56d5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07fbb56cd7a10bd86",
            "owner_id": "480348506690",
            "tags": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    }
  ]
}